src/test/ui/nll/borrowck-thread-local-static-mut-borrow-outlives-fn.stderr
error[E0712]: thread-local variable borrowed past end of function
  --> $DIR/borrowck-thread-local-static-mut-borrow-outlives-fn.rs:13:25
   |
LL |             a: unsafe { &mut X1 },
   |                         ^^^^^^^ thread-local variables cannot be borrowed beyond the end of the function
...
LL |     }
   |      - end of enclosing function is here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0712`.
